# NaiveNumbers

./: CMakeLists.txt  README.md  main.cpp
libbayes/src/: CMakeLists.txt  file_reader.cpp  file_reader.hpp  model.hpp  trainer.cpp  trainer.hpp
libbayes/test/: CMakeLists.txt  test_file_reader.cpp  test_trainer.cpp
libbayes/test/resources/file_reader_test_files/: another_long_file  another_valid_file  chars_on_separated_lines  empty_then_valid  filled_shaded  long_file  single_line_file  valid_file
